--- a/to-do-list/css/style.css
+++ b/to-do-list/css/style.css
@@ -3,12 +3,23 @@
 }
 
 body {
-  background-color: azure;
+  background-image: url('../images/Clear.jpeg');
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0;
   min-height: 100vh;
+}
+
+h1 {
+  color: white;
+  text-shadow: 2px 2px gray;
+  opacity: 80%;
+}
+
+input {
+  opacity: 80%;
 }
 
 .todo-container {
@@ -66,4 +77,11 @@ li button:active {
   background-color: antiquewhite;
   padding: 0.2rem 1rem;
   cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 3px 3px gray;
+}
+.delete-btn-wrapper button:active {
+  box-shadow: none;
+  margin-left: 3px;
 }
